# hamster-foods-backend

./: .coveragerc  .env.example  .gitignore  README.md  cli_add_transaction.py  initialize_db.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.atl/: skill-registry.md
api/application/: currency_service.py  customer_service.py  ports.py  services.py  sync_tier_service.py
api/domain/: constants.py  models.py  services.py
api/infrastructure/: auth.py  config.py  currency_service.py  db_repository.py  dependencies.py  http_api.py  sqlite_repository.py
docs/: adr-001-rolling-window.md  adr-001-single-source-of-truth.md  adr-002-pessimistic-locking.md  adr-002-single-source-of-truth.md  adr-003-currency-stability.md  adr-003-pessimistic-locking.md  adr-004-currency-stability.md  adr-004-history-based-state.md  adr-005-history-based-state.md  rfc-001-tiering-and-currency-logic.md
sql/: schema.sql  seeds.sql
tests/: conftest.py
tests/api/application/: test_application_services.py  test_currency_service.py  test_customer_service.py  test_sync_tier_service.py
tests/api/domain/: test_domain_services.py
tests/api/infrastructure/: test_auth.py  test_config.py  test_dependencies.py  test_http_api.py  test_sqlite_repository.py
tests/fixtures/: database_fixtures.py  user_fixtures.py
