[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "fastapi-tier-backend"
version = "1.0.0"
description = "FastAPI backend demonstrating tier status and loyalty system patterns"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Demo Developer", email = "demo@example.com"}
]
keywords = ["fastapi", "tier-system", "loyalty", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi==0.135.2",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.12.5",
    "InquirerPy==0.3.4",
    "requests==2.31.0",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
]

[project.scripts]
tier-backend = "main:app"

[tool.setuptools]
packages = ["api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=api --cov-report term-missing -vv --ignore=api/application/ports.py"
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["api"]
omit = [
    "initialize_db.py",
    "main.py",
    "api/application/ports.py",
    "tests/*",
    "*__init__.py",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
